[On going] Persistent-Sub level structure
need to check about playerStart in sub level.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/000_MainMenu.000_MainMenu
-EditorStartupMap=/Game/Levels/000_MainMenu.000_MainMenu
+GameDefaultMap=/Game/Levels/P_Level.P_Level
+EditorStartupMap=/Game/Levels/P_Level.P_Level
 GameInstanceClass=/Game/Core/GameInstance/BP_MyGameInstance.BP_MyGameInstance_C
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 
