--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,10 @@ DerivedDataCache/*
 
 # Unreal's Content folder and its subfolders
 Content/*/**
+!Content/*/**.umap
+!Content/*/**.uasset
+!Content/*.umap
+!Content/*.uasset
 
 #The specific folder inside the Content folder is included.
 !Content/00_Project/**
