--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -10,6 +10,7 @@ InvalidTagCharacters="\"\',"
 +GameplayTagTableList=/Game/Blueprints/Combat_Mechanism/Ability/DT_Gameplay_Tags_for_Ability.DT_Gameplay_Tags_for_Ability
 +GameplayTagTableList=/Game/Blueprints/Combat_Mechanism/Ability/DT_Gamplay_Tags_for_Object_Pools.DT_Gamplay_Tags_for_Object_Pools
 +GameplayTagTableList=/Game/Blueprints/UserWidget/DT_Gameplay_Tags_for_UI_Layers.DT_Gameplay_Tags_for_UI_Layers
++GameplayTagTableList=/Game/Blueprints/UserWidget/DT_Gameplay_Tags_For_Persistent_Widgets.DT_Gameplay_Tags_For_Persistent_Widgets
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 
